--- a/shopping1/tasks/main.yml
+++ b/shopping1/tasks/main.yml
@@ -1,2 +1,18 @@
 ---
 # tasks file for shopping1
+
+- name: ensure Docker is installed
+  yum: 
+    name: docker
+    state: present
+
+- name: ensure docker is running and enable the service when server is restarterd
+  service:
+    name: docker
+    state: started
+    enabled: yes
+
+- name: adding ec2-user to docker group
+  group:
+    name: docker
+    state: present
